--- a/src/components/Meals/AvailableMeals.module.css
+++ b/src/components/Meals/AvailableMeals.module.css
@@ -11,6 +11,19 @@
   padding: 0;
 }
 
+.loading-text {
+  color: white;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+}
+.error-text {
+  color: red;
+  text-align: center;
+  margin-top: 2rem;
+  font-size: 1.5rem;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
